2008-07-31  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-actb-visit-item-command): new function
	(ucm-actb-mode-map): add binding for `ucm-actb-visit-item-command'

2008-07-29  Alexandru Harsanyi  <aharsanyi@ImmersiveTechnologies.com>

	* ucm.el (ucm-list-activities): DIR is now optional and defaults
	to the current directory.  Use `pop-to-buffer' to display the
	activtiy list buffer.
	(ucm-previous-activity-link-handler): set `inhibit-read-only' to t
	when operating on the buffer.
	(ucm-browse-activity): Use `pop-to-buffer' to display the activtiy
	browser buffer.

2008-07-22  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-lsact-activity-pp): changed format of the entry

	* vc-clearcase.el only activate the clearcase backend on Emacs22
	or earlier.
	(clearcase-read-view-tag, clearcase-read-label): use
	`try-completion' for any value of FLAG in completing-read.

2008-06-29  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-never-report): 1.158 updated list of
	variables which are not included in the report

2008-06-24  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-lsact-activity): new structure slot: HEADLINE
	(ucm-lsact-activity-pp): only print the headline
	(ucm-lsact-create-ewoc): fetch the activity headline when creating
	an ucm-lsact-activity structure instance.
	(ucm-list-activities): use `consp' instead if `listp' for checking
	if `current-prefix-arg' is a list (nil is a valid list according
	to `listp')

2008-06-14  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-create-activity-function): new variable
	(ucm-set-activity): use `ucm-create-activity-function' to create
	new activities.
	(ucm-lsact-unlock-activity-command): new function
	(ucm-lsact-mode-map): add binding for
	`ucm-lsact-unlock-activity-command'

2008-06-07  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-locked-activity-face)